// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderBreak renders 0 1`] = `
Array [
  .c0 {
  border-break: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-break: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-break: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-break: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBreak renders function 1`] = `
Array [
  .c0 {
  border-break: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-break: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-break: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-break: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBreak renders invalid theme path 1`] = `
Array [
  .c0 {
  border-break: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-break: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-break: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-break: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBreak renders negative number 1`] = `
Array [
  .c0 {
  border-break: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-break: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-break: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-break: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBreak renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  border-break: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-break: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-break: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-break: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-break: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-break: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-break: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-break: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-break: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-break: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-break: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-break: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-break: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-break: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-break: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-break: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-break: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-break: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-break: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-break: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBreak renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-break: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-break: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-break: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-break: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-break: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-break: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-break: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-break: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-break: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-break: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-break: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-break: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-break: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-break: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-break: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-break: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBreak renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  border-break: July;
}

@media May {
  .c0 {
    border-break: August;
  }
}

@media April {
  .c0 {
    border-break: September;
  }
}

@media January {
  .c0 {
    border-break: November;
  }
}

@media April {
  .c0 {
    border-break: August;
  }
}

@media June {
  .c0 {
    border-break: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-break: July;
}

@media May {
  .c0 {
    border-break: August;
  }
}

@media April {
  .c0 {
    border-break: September;
  }
}

@media January {
  .c0 {
    border-break: November;
  }
}

@media April {
  .c0 {
    border-break: August;
  }
}

@media June {
  .c0 {
    border-break: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-break: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-break: November;
  }
}

@media April {
  .c0 {
    border-break: January;
  }
}

@media January {
  .c0 {
    border-break: December;
  }
}

@media April {
  .c0 {
    border-break: April;
  }
}

@media June {
  .c0 {
    border-break: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-break: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-break: November;
  }
}

@media April {
  .c0 {
    border-break: January;
  }
}

@media January {
  .c0 {
    border-break: December;
  }
}

@media April {
  .c0 {
    border-break: April;
  }
}

@media June {
  .c0 {
    border-break: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBreak renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    border-break: July;
  }
}

@media April {
  .c0 {
    border-break: August;
  }
}

@media January {
  .c0 {
    border-break: September;
  }
}

@media April {
  .c0 {
    border-break: November;
  }
}

@media June {
  .c0 {
    border-break: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-break: July;
  }
}

@media April {
  .c0 {
    border-break: August;
  }
}

@media January {
  .c0 {
    border-break: September;
  }
}

@media April {
  .c0 {
    border-break: November;
  }
}

@media June {
  .c0 {
    border-break: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-break: January;
  }
}

@media April {
  .c0 {
    border-break: December;
  }
}

@media January {
  .c0 {
    border-break: April;
  }
}

@media April {
  .c0 {
    border-break: May;
  }
}

@media June {
  .c0 {
    border-break: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-break: January;
  }
}

@media April {
  .c0 {
    border-break: December;
  }
}

@media January {
  .c0 {
    border-break: April;
  }
}

@media April {
  .c0 {
    border-break: May;
  }
}

@media June {
  .c0 {
    border-break: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBreak renders postitive number 1`] = `
Array [
  .c0 {
  border-break: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-break: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-break: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-break: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBreak renders string 1`] = `
Array [
  .c0 {
  border-break: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-break: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-break: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-break: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBreak renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`borderBreak renders valid theme path 1`] = `
Array [
  .c0 {
  border-break: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-break: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-break: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-break: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
